--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="flags">
     <h2 class="label">Poland</h2>
     <div class="flag">
-      <div class="white twovert"></div>
+      <div class="white-twovert"></div>
       <div class="red twovert"></div>
     </div>
   
@@ -37,19 +37,25 @@
     </div>
   
     <h2 class="label">Romania</h2>
-    <div class="flag" style="">
+    <div class="flag" style="display: flex; flex-direction: row">
       <!-- insert flag here -->
+      <div class="romania-blue threehoriz"></div>
+      <div class="romania-yellow threehoriz"></div>
+      <div class="romania-red threehoriz"></div>
     </div>
   
     <h2 class="label">Mexico</h2>
-    <div class="flag">
+    <div class="flag" style="display: flex; flex-direction: row">
       <!-- insert flag here -->
+      <div class="mexico-green" style="box-sizing: border-box; width: 33.3%"></div>
+      <img class="mexico-img" src="eagle.png" alt="eagle.png">
+      <div class="mexico-red" style="box-sizing: border-box; width: 33.3%"></div>
     </div>
 
     <h2>Margin</h2>
     <div class="margin-container">
-      <div class="flag"></div>
-      <div class="flag"></div>
+      <div class="flag" style="margin: 5px"></div>
+      <div class="flag" style="margin: 5px"></div>
     </div>
 
     <h2>Padding</h2>
